feat: layout basico dashboard

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -12,10 +12,10 @@
             <app-title class="text-white mb-20" text="Faça o gerencimento da sua empresa!" />
             <div class="w-[70%] mx-auto ">
                 <div class="mb-2">
-                    <label class="block text-gray-50 text-sm font-semibold mb-2" for="username">
+                    <label class="block text-gray-50 text-sm font-semibold mb-2" for="email">
                         Email
                     </label>
-                    <input class="border rounded w-full py-2 px-3 text-gray-700" id="username" type="username" placeholder="***********" [(ngModel)]=" username" name="username">
+                    <input class="border rounded w-full py-2 px-3 text-gray-700" id="email" type="email" placeholder="Digite o seu email" [(ngModel)]=" email" name="username">
                 </div>
 
                 <div class="mb-2">
