--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -1,3 +1,3 @@
-<div class="container  gap-4 p-2 ">
+<div class="container mx-auto gap-4 p-2 ">
     <h1 class="text-center text-2xl font-semibold">Faça aqui sua gestão do seu comércio</h1>
 </div>
