--- a/src/app/dashboard/product/product.component.html
+++ b/src/app/dashboard/product/product.component.html
@@ -1,6 +1,6 @@
 <div class="container gap-4 mx-auto p-2 ">
     <header class="flex justify-between">
-        <h1 class="text-2xl font-semibold">Empresas</h1>
+        <h1 class="text-2xl font-semibold">Produtos</h1>
         <app-button (click)="openModal('CREATE')" text="Cadastrar" />
     </header>
 
