--- a/src/app/dashboard/company/company.component.html
+++ b/src/app/dashboard/company/company.component.html
@@ -9,10 +9,10 @@
             <thead class="bg-gray-50">
                 <tr>
                     <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Corporate Name
+                        Nome Fantasia
                     </th>
                     <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Company Name
+                        Razao Social
                     </th>
                     <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                         CNPJ
@@ -42,11 +42,11 @@
     <app-modal [text]="modalText" [isVisible]="isModalVisible" (closeModal)="closeModal()">
         <form [formGroup]="companyForm" (ngSubmit)="onSubmit()">
             <div class="mb-2">
-                <label class="text-md font-semibold mb-2" for="corporateName">Corporate Name:</label>
+                <label class="text-md font-semibold mb-2" for="corporateName">Nome Fantasia:</label>
                 <input class="border rounded w-full py-2 px-3 text-gray-700" id="corporateName" formControlName="corporateName" />
             </div>
             <div class="mb-2">
-                <label class="text-md font-semibold mb-2" for="companyName">Company Name:</label>
+                <label class="text-md font-semibold mb-2" for="companyName">Razao Social:</label>
                 <input class="border rounded w-full py-2 px-3 text-gray-700" id="companyName" formControlName="companyName" />
             </div>
             <div class="mb-2">
