--- a/src/app/dashboard/product/product.component.html
+++ b/src/app/dashboard/product/product.component.html
@@ -9,28 +9,33 @@
             <thead class="bg-gray-50">
                 <tr>
                     <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Corporate Name
+                        Nome
                     </th>
                     <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Company Name
+                        Descrição
                     </th>
                     <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        CNPJ
+                        Preço
                     </th>
-                    <th scope="col" class="">
+                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                        Empresa
+                    </th>
+                    <th scope="col">
                     </th>
                 </tr>
             </thead>
             <tbody class="bg-white divide-y divide-gray-200">
-                <tr *ngFor="let company of companies">
-                    <td class="px-6 py-4 whitespace-nowrap">{{ company.corporateName }}</td>
-                    <td class="px-6 py-4 whitespace-nowrap">{{ company.companyName }}</td>
-                    <td class="px-6 py-4 whitespace-nowrap">{{ company.cnpj }}</td>
+                <tr *ngFor="let product of products">
+                    <td class="px-6 py-4 whitespace-nowrap">{{ product.name }}</td>
+                    <td class="px-6 py-4 whitespace-nowrap">{{ product.description }}</td>
+                    <td class="px-6 py-4 whitespace-nowrap">{{ product.price }}</td>
+                    <td class="px-6 py-4 whitespace-nowrap">{{ getCorporateNameForProduct(product.company) }}</td>
+
                     <td class="px-6 py-4 whitespace-nowrap text-right">
-                        <button class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded mr-2" (click)="openModal('UPDATE',company)">
+                        <button class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded mr-2" (click)="openModal('UPDATE',product)">
                             Atualizar
                         </button>
-                        <button class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded" (click)="confirmDelete(company)">
+                        <button class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded" (click)="confirmDelete(product)">
                             Deletar
                         </button>
                     </td>
@@ -40,31 +45,38 @@
     </main>
 
     <app-modal [text]="modalText" [isVisible]="isModalVisible" (closeModal)="closeModal()">
-        <form [formGroup]="companyForm" (ngSubmit)="onSubmit()">
+        <form [formGroup]="productForm" (ngSubmit)="onSubmit()">
             <div class="mb-2">
-                <label class="text-md font-semibold mb-2" for="corporateName">Corporate Name:</label>
-                <input class="border rounded w-full py-2 px-3 text-gray-700" id="corporateName" formControlName="corporateName" />
+                <label class="text-md font-semibold mb-2" for="name">Nome:</label>
+                <input class="border rounded w-full py-2 px-3 text-gray-700" id="name" formControlName="name" />
             </div>
             <div class="mb-2">
-                <label class="text-md font-semibold mb-2" for="companyName">Company Name:</label>
-                <input class="border rounded w-full py-2 px-3 text-gray-700" id="companyName" formControlName="companyName" />
+                <label class="text-md font-semibold mb-2" for="description">Descrição:</label>
+                <input class="border rounded w-full py-2 px-3 text-gray-700" id="description" formControlName="description" />
             </div>
             <div class="mb-2">
-                <label class="text-md font-semibold mb-2" for="cnpj">CNPJ:</label>
-                <input class="border rounded w-full py-2 px-3 text-gray-700" id="cnpj" formControlName="cnpj" />
+                <label class="text-md font-semibold mb-2" for="cnpj">Preço:</label>
+                <input class="border rounded w-full py-2 px-3 text-gray-700" id="price" formControlName="price" />
+            </div>
+
+            <div class="mb-2">
+                <label class="text-md font-semibold mb-2" for="selectedCompany">Selecione a Empresa:</label>
+                <select class="border rounded w-full py-2 px-3 text-gray-700" id="selectedCompany" formControlName="company">
+                    <option *ngFor="let company of companies" [value]="company._id">{{ company.corporateName }} - {{ company.companyName }}</option>
+                </select>
             </div>
 
             <div class="flex gap-2 justify-end">
-                <button class="bg-blue-950 hover:bg-blue-900 text-white font-semibold py-2 px-4 rounded" type="submit" [disabled]="companyForm.invalid">{{ action === 'CREATE' ? 'Cadastrar' : 'Atualizar' }}</button>
+                <button class="bg-blue-950 hover:bg-blue-900 text-white font-semibold py-2 px-4 rounded" type="submit" [disabled]="productForm.invalid">{{ action === 'CREATE' ? 'Cadastrar' : 'Atualizar' }}</button>
                 <button class="bg-red-500 hover:bg-red-400 text-white font-semibold py-2 px-4 rounded" (click)="closeModal()">Cancelar</button>
             </div>
         </form>
     </app-modal>
 
     <app-modal [text]="deleteModalText" [isVisible]="isDeleteModalVisible" (closeModal)="cancelDelete()">
-        <p>Tem certeza que deseja excluir esta empresa?</p>
+        <p>Tem certeza que deseja excluir este produto?</p>
         <div class="flex gap-2 justify-end mt-4">
-            <button class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded" (click)="deleteCompany()">Confirmar</button>
+            <button class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded" (click)="deleteProduct()">Confirmar</button>
             <button class="bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded" (click)="cancelDelete()">Cancelar</button>
         </div>
     </app-modal>
