--- a/src/app/dashboard/product/product.component.html
+++ b/src/app/dashboard/product/product.component.html
@@ -56,7 +56,7 @@
             </div>
             <div class="mb-2">
                 <label class="text-md font-semibold mb-2" for="cnpj">Preço:</label>
-                <input class="border rounded w-full py-2 px-3 text-gray-700" id="price" formControlName="price" />
+                <input type="number" class="border rounded w-full py-2 px-3 text-gray-700" id="price" formControlName="price" />
             </div>
 
             <div class="mb-2">
