--- a/src/app/dashboard/product/product.component.html
+++ b/src/app/dashboard/product/product.component.html
@@ -29,7 +29,7 @@
                     <td class="px-6 py-4 whitespace-nowrap">{{ product.name }}</td>
                     <td class="px-6 py-4 whitespace-nowrap">{{ product.description }}</td>
                     <td class="px-6 py-4 whitespace-nowrap">{{ product.price }}</td>
-                    <td class="px-6 py-4 whitespace-nowrap">{{ getCorporateNameForProduct(product.company) }}</td>
+                    <td class="px-6 py-4 whitespace-nowrap">{{ getCorporateNameForProduct(product.company._id) }}</td>
 
                     <td class="px-6 py-4 whitespace-nowrap text-right">
                         <button class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded mr-2" (click)="openModal('UPDATE',product)">
